<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="switch_button">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish</string>
    <string name="ok">Yes</string>
...
    <string name="toast_switch_on">Switch is ON</string>
    <string name="toast_switch_off">Switch is OFF</string>
    <string name="toast_invalid_email">Incorrect or empty email</string>
    <string name="toast_invalid_password">Empty password</string>
    <string name="toast_MA_response">ListItemsActivity passed: </string>
    <string name="toast_LIA_response">Here is my response</string>
    <string name="chatButton">Start Chat</string>
    <string name="sendButton">SEND</string>
    <string name="toolbarButton">Test Toolbar</string>
    <string name="toast_about">Version 1.0, by Tatiana</string>
    <string name="pizza_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="weather">Weather</string>
...
