...
        android:layout_alignParentEnd="true"
        android:layout_above="@id/sendButton">

    </ListView>

    <EditText
        android:id="@+id/id_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/sendButton">

...
